--- a/styles/app.css
+++ b/styles/app.css
@@ -5,8 +5,63 @@ body {
 h1 {
   color: #005091;
   font-size: 250%;
+  line-height: 26px;
+}
+
+h1 small {
+  color: #005091;
+}
+
+a {
+  background-color: #005091;
+  color: #fff;
+  line-height: 32px;
+  padding: 2px 4px;
+  -webkit-transition: all 400ms ease;
+  -moz-transition: all 400ms ease;
+  -o-transition: all 400ms ease;
+  transition: all 400ms ease;
+}
+
+a:hover {
+  background-color: #fff;
+  color: #005091;
+  text-decoration: none;
+}
+
+p {
+  font-size: 21px;
+  font-weight: 300;
+  line-height: 1.4;
 }
 
 svg {
   width: 75px;
+}
+
+.logo,
+.heading {
+  float: left;
+}
+
+.logo {
+  margin-top: 3px;
+}
+
+.heading {
+  margin-left: 20px;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.delay-1 {
+  -webkit-animation-delay: 900ms;
+  animation-delay: 900ms;
+}
+
+.delay-2 {
+  -webkit-animation-delay: 1800ms;
+  animation-delay: 1800ms;
 }
