--- a/styles/app.css
+++ b/styles/app.css
@@ -36,10 +36,12 @@ a.link:hover {
   text-decoration: none;
 }
 
-ul.lead li {
-  font-size: 21px;
-  font-weight: 300;
-  line-height: 1.4;
+@media (min-width: 768px) {
+  ul.lead li {
+    font-size: 21px;
+    font-weight: 300;
+    line-height: 1.4;
+  }
 }
 
 svg {
@@ -67,6 +69,10 @@ svg {
 
 .port-user {
   min-height: 36px;
+}
+
+.port-user a {
+  color: #333;
 }
 
 .mb-0 {
