--- a/templates/works.html
+++ b/templates/works.html
@@ -4,7 +4,10 @@
     <div class="caption">
       <h3>{{ work.head }}</h3>
       <p class="port-desc">{{ work.desc }}</p>
-      <p class="port-user"><i class="glyphicon glyphicon-user"></i> {{ work.user }}</p>
+      <p class="port-user">
+        <i class="glyphicon glyphicon-user"></i>
+        <a href="{{ work.ulnk }}" target="_blank">{{ work.user }}</a>
+      </p>
       <p>
         <span ng-repeat="btn in work.btns">
           <a href="{{ btn.link }}" target="_blank" class="btn btn-{{ btn.type }}" role="button"><i class="glyphicon glyphicon-{{ btn.icon }}"></i> {{ btn.text }}</a>
